--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -16,6 +16,8 @@ body {
 	margin-left: auto;
 	margin-right: auto;
 	text-align: center;
+	font-size: 24px;
+	color: #3819B7;
 }
 input  {
 	border: 1px solid #ccc;
@@ -75,6 +77,7 @@ input  {
 	padding: 15px;
 	border-radius: 5px;
 	color: #FFFFFF;
+	margin-bottom: 40px;
 } 
 
 .winner {
@@ -96,17 +99,36 @@ input  {
 	border-radius: 5px;
 	color: #FFFFFF;
 	padding: 15px;
+	margin-bottom: 40px;
 }
 
 #chat {
 	clear: both;
+	width: 60%;
+	margin: auto;
+	text-align: center;
+	padding: 30px;
+	background-color: #152678;
+	border-radius: 5px;
+}
+
+#chat-area {
+	background-color: #A6A6A6;
+	border-radius: 5px;
+	width: 80%;
+	height: 80%;
+}
+
+#send-message-area {
+	min-height: 50px;
+	width: 300px;
 }
 
 p {
 	margin: 10px;
 }
 
-button {
+.rps-button {
 	margin: 1%;
 	border: 1px solid #ccc;
     box-sizing: border-box;
@@ -116,6 +138,6 @@ button {
 	padding: auto;
 	color:  #152678;
 	font-family: 'PT Mono', monospace;
-	font-size: 17px;
+	font-size: 16px;
 }
 
